--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     left: 30%;
     position: absolute;
     font-family: sans-serif;
+    background-color: aliceblue;
+    border: 1px solid lightblue;
+    border-radius: 10px;
+    padding: 10px;
 }
 
 .pokemon .img {
@@ -21,7 +25,6 @@
     top: 33%;
     position: relative;
 }
-
 
 
 footer {
