--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Work+Sans&display=swap');
+
 .pokemon {
-    top: 11%;
-    left: 30%;
+    top: 7%;
+    left: 40%;
     position: absolute;
-    font-family: sans-serif;
+    font-family: 'Poppins', sans-serif;
     background-color: aliceblue;
     border: 1px solid lightblue;
     border-radius: 10px;
@@ -44,6 +46,14 @@
 
 .ability h4 {
     font-weight: 500;
+}
+
+.nextpoke {
+    top: 45%;
+    left: 65%;
+    font-family: 'Poppins', sans-serif;
+    position: absolute;
+    font-size: 16px;
 }
 
 
