--- a/style.css
+++ b/style.css
@@ -39,9 +39,14 @@
     position: relative;
 }
 
+.ability {
+    border-top: 1px solid black;
+}
+
 .ability h3, .ability h4 {
     text-align: center;
-    font-family: serif;
+    font-family: sans-serif;
+    font-size: 15px;
 }
 
 .ability h4 {
@@ -53,9 +58,12 @@
     left: 65%;
     font-family: 'Poppins', sans-serif;
     position: absolute;
-    font-size: 16px;
 }
 
+.nextpoke h3 {
+    font-size: 19px;
+    font-weight: 700;
+}
 
 footer {
     top: 90%;
