--- a/style.css
+++ b/style.css
@@ -115,6 +115,12 @@
 .nextpoke h3 {
     font-size: 19px;
     font-weight: 700;
+    border-bottom: 1px solid black;
+}
+
+.nextpoke h4 {
+    text-align: center;
+    margin-top: -15px;
 }
 
 footer {
