--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Work+Sans&display=swap');
 
+body {
+    background-color: rgba(255, 255, 0, 0.117);
+}
+
 .pokemon {
     top: 4%;
     left: 33%;
@@ -88,6 +92,8 @@
     max-width: fit-content;
     font-family: 'Poppins', sans-serif;
     background-color: aliceblue;
+    padding: 2px;
+    border-radius: 5px;
 }
 
 .signature-moves {
@@ -124,7 +130,7 @@
 }
 
 footer {
-    top: 92%;
+    top: 91%;
     left: 91%;
     position: absolute;
 }
