--- a/style.css
+++ b/style.css
@@ -4,9 +4,20 @@ body {
     background-color: rgba(255, 255, 0, 0.117);
 }
 
+.pokelogo {
+    top: 1%;
+    left: 89%;
+    position: absolute;
+}
+
+.pokelogo img {
+    max-width: 200px;
+    max-height: auto;
+}
+
 .pokemon {
     top: 4%;
-    left: 33%;
+    left: 35%;
     position: absolute;
     font-family: 'Poppins', sans-serif;
     background-color: aliceblue;
@@ -97,11 +108,11 @@ body {
 }
 
 .signature-moves {
-    left: 52%;
+    left: 54%;
 }
 
 .recommended-moves {
-    left: 64%;
+    left: 66%;
 }
 
 .signature-moves table tr td, .recommended-moves table tr td {
@@ -131,6 +142,6 @@ body {
 
 footer {
     top: 91%;
-    left: 91%;
+    left: 92%;
     position: absolute;
 }
