Alpha v0.18.3: add transform property to this link

--- a/style.css
+++ b/style.css
@@ -139,6 +139,11 @@ body {
     text-decoration: none;
 }
 
+.pokedex:hover {
+    transform: scaleX(1.2);
+    transition: 0.3s transform;
+}
+
 
 .nextpoke {
     top: 45%;
