--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@ body {
 }
 
 .pokemon .typing {
-    border-radius: 5px;
     display: grid;
 }
 
@@ -40,6 +39,9 @@ body {
     text-align: center;
 }
 
+.pokemon .typing table tr td {
+    border-radius: 5px;
+}
 
 .pokemon .img {
     font-family: 'Ubuntu';
@@ -138,8 +140,8 @@ body {
 }
 
 .pokedex:hover, .moveslist:hover {
-    transform: scaleX(1.2);
-    transition: 0.3s transform;
+    transform: scaleX(1.1);
+    transition: 0.2s transform;
 }
 
 .pokedex {
@@ -153,8 +155,8 @@ body {
 }
 
 .nextpoke {
-    top: 45%;
-    left: 65%;
+    top: 42%;
+    left: 68%;
     font-family: 'Poppins', sans-serif;
     position: absolute;
 }
