--- a/style.css
+++ b/style.css
@@ -18,16 +18,13 @@ body {
 
 .pokemon {
     top: 4%;
-    left: 35%;
+    left: 41%;
     position: absolute;
     font-family: 'Poppins', sans-serif;
     background-color: aliceblue;
     border: 1px solid lightblue;
     border-radius: 10px;
-    padding-top: 8px;
-    padding-left: 8px;
-    padding-right: 8px;
-    padding-bottom: 3px;
+    padding: 8px 8px 8px 8px;
     width: fit-content;
 }
 
@@ -76,10 +73,7 @@ body {
 .hidden {
     display: inline-block;
     max-height: 50px;
-}
-
-.hidden, .lc {
-    margin-top: -10px;
+    margin-top: -25px;
 }
 
 .lc {
@@ -91,11 +85,13 @@ body {
     padding: 5px 0;
     margin-left: 8px;
     border-radius: 6px;
+    font-size: 14px;
     position: absolute;
     z-index: 1;
+    margin-top: -12px;
 }
 
-.hidden:hover .lc {
+.hidden h4:hover .lc {
     opacity: 1;
     transition: 0.3s opacity;
 }
@@ -112,11 +108,11 @@ body {
 }
 
 .signature-moves {
-    left: 22%;
+    left: 27%;
 }
 
 .recommended-moves {
-    left: 56%;
+    left: 62%;
 }
 
 .signature-moves table tr td, .recommended-moves table tr td {
@@ -164,12 +160,12 @@ body {
 
 .lastpoke {
     top: 42%;
-    left: 12%;
+    left: 15%;
 }
 
 .nextpoke {
     top: 42%;
-    left: 68%;
+    left: 71%;
 }
 
 .lastpoke a, .nextpoke a {
