Alpha v0.2.6: add transform property to the pale violet red lastpoke and nextpoke

--- a/style.css
+++ b/style.css
@@ -198,6 +198,12 @@ body {
     margin-top: -17px;
 }
 
+.lastpoke h3:hover, .nextpoke h3:hover {
+    transform: scale(1.05);
+    transition: 0.2s transform;
+}
+
+
 footer {
     top: 92%;
     left: 92%;
