--- a/style.css
+++ b/style.css
@@ -148,6 +148,11 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.signature-moves table tr td a, .recommended-moves table tr td a {
+    text-decoration: none;
+}
+
+
 .pokedex, .moveslist {
     display: inline-block;
     left: 98%;
