--- a/style.css
+++ b/style.css
@@ -223,11 +223,37 @@ body {
     transition: 0.2s transform;
 }
 
-
 footer {
     top: 92%;
     left: 92%;
     position: absolute;
 }
+
+/* Switch to pokedex.html here */ 
+
+.pokedex-pokelist {
+    top: 16%;
+    left: 16%;
+    position: absolute;
+    max-width: fit-content;
+    max-height: fit-content;
+    border: 1px solid black;
+}
+
+.pokedex-pokelist table tr td {
+    border: 1px solid black;
+    padding: 5px;
+    font-size: 18px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+
+
+
+
+
+
+
+
 
 /* Add @media here. /*
