--- a/style.css
+++ b/style.css
@@ -238,17 +238,17 @@ footer {
     max-width: fit-content;
     max-height: fit-content;
     border: 1px solid black;
+    border-radius: 5px;
 }
+
 
 .pokedex-pokelist table tr td {
     border: 1px solid black;
-    padding: 5px;
-    font-size: 18px;
+    border-radius: 5px;
+    padding: 7px;
+    font-size: 22px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
-
-
 
 
 
