--- a/style.css
+++ b/style.css
@@ -7,13 +7,31 @@ body {
 
 .pokelogo {
     top: 1%;
-    left: 89%;
+    left: 1%;
     position: absolute;
 }
 
 .pokelogo img {
     max-width: 200px;
     max-height: auto;
+}
+
+.topnav {
+    top: 1%;
+    left: 83%;
+    padding: 10px;
+    background-color: aliceblue;
+    position: absolute;
+    border: 2px solid darkgoldenrod;
+    border-radius: 10px;
+    max-width: fit-content;
+    max-height: fit-content;
+}
+
+.topnav input {
+    border-radius: 5px;
+    width: 290px;
+    background-color: aliceblue;
 }
 
 .pokemon {
