--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     max-height: auto;
 }
 
-.topnav {
+.search {
     top: 1%;
     left: 83%;
     padding: 10px;
@@ -28,7 +28,7 @@ body {
     max-height: fit-content;
 }
 
-.topnav input {
+.search input {
     border-radius: 5px;
     width: 290px;
     background-color: aliceblue;
@@ -268,7 +268,23 @@ footer {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+@media screen and (max-width: 960px) {
+    .pokelogo {
+        visibility: hidden;
+    }
 
+    .search {
+        top: 1%;
+        left: 33%;   
+        padding: 10px;
+        background-color: aliceblue;
+        position: absolute;
+        border: 2px solid darkgoldenrod;
+        border-radius: 10px;
+        max-width: 180px;
+        max-height: fit-content;
+    }
+}
 
 
 
