--- a/style.css
+++ b/style.css
@@ -290,7 +290,7 @@ footer {
 
     .pokemon {
         top: 7%;
-        left: 10%;
+        left: 11%;
         position: absolute;
         max-width: fit-content;
         scale: 0.8;
@@ -300,35 +300,33 @@ footer {
         scale: 0.7;
         position: absolute;
         max-width: fit-content;
-        padding: 3px;
-        top: 7%;
+        padding: 5px;
+        top: 6%;
         display: inline-block;
     }
 
     .lastpoke {
-        left: 2%;
+        left: 1%;
+        text-align: right;
     }
 
     .nextpoke {
-        left: 70%;
+        left: 65%;
     }
 
     .lastpoke h3, .nextpoke h3 {
         border: 0;
-        font-size: 17px;
-        margin-bottom: -14px;
+        font-size: 20px;
+        margin-bottom: -1px;
     }
 
     .lastpoke h4, .nextpoke h4 {
         visibility: hidden;
     }
 
-    .signature-moves, .recommended-moves, footer {
+    .signature-moves, .recommended-moves, footer, .pokedex, .moveslist {
         display: none;
     }
 
 }
 
-
-
-/* Add @media here. /*
